@@ -16,3 +16,5 @@
 # Microsoft Translator credentials
 #-Dmicrosoft.api.client_id=xxxxx
 #-Dmicrosoft.api.client_secret=xxxxx
+# MyMemory email
+#-Dmymemory.api.email=xxxxx@xxxxx.xx
